# zk-coprocessor-bridge

./: .gitignore  LICENSE-MIT  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/: .env.example  package-lock.json  package.json
apps/src/: cli.ts  init_receipt_config.ts  relayer.ts  sandbox.ts  send.ts
aztec-contracts/contracts/zk-coprocessor-contracts/: Nargo.toml
aztec-contracts/contracts/zk-coprocessor-contracts/src/: main.nr
docs/: sandbox.md
docs/logs/: log-2025-10-11.txt  log-2025-11-19.txt
docs/proofs/: proof-2025-10-11.md  proof-2025-11-19.md
evm-contracts/: .env.example  foundry.toml
evm-contracts/src/: SandboxPortal.sol  ZkCoprocessorPortal.sol
solana-program/: Anchor.toml  Cargo.toml
solana-program/programs/zk-coprocessor-program/: Cargo.toml
solana-program/programs/zk-coprocessor-program/src/: lib.rs
